@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.6 2004/02/14 17:21:55 jlam Exp $
+# $NetBSD: Makefile,v 1.7 2004/03/11 16:56:12 xtraeme Exp $
 #
 
-DISTNAME=	fbdesk-1.1.4
+DISTNAME=	fbdesk-1.1.5
 CATEGORIES=	x11 wm
 MASTER_SITES=	http://fluxbox.sourceforge.net/download/
 
@@ -11,12 +11,12 @@ COMMENT=	Application that creates and manage icons on your Fluxbox desktop
 
 DEPENDS+=	fluxbox>=0.1.14:../../wm/fluxbox
 
-USE_BUILDLINK2=	YES
+USE_BUILDLINK3=	YES
 USE_LIBTOOL=	YES
 GNU_CONFIGURE=	YES
 USE_X11=	YES
 
-.include "../../graphics/png/buildlink2.mk"
-.include "../../fonts/Xft2/buildlink2.mk"
-.include "../../devel/pkgconfig/buildlink2.mk"
+.include "../../graphics/png/buildlink3.mk"
+.include "../../fonts/Xft2/buildlink3.mk"
+.include "../../devel/pkgconfig/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
