@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.2 2003/05/31 15:05:27 jmmv Exp $
+$NetBSD: distinfo,v 1.3 2004/03/11 16:56:12 xtraeme Exp $
 
-SHA1 (fbdesk-1.1.4.tar.gz) = a62c06be9a12be5f8ccc6a9705f5d00b23e38a3b
-Size (fbdesk-1.1.4.tar.gz) = 253031 bytes
+SHA1 (fbdesk-1.1.5.tar.gz) = 246b1e1d31465a54d3c0ab96b2e9c4007508738b
+Size (fbdesk-1.1.5.tar.gz) = 253057 bytes
